--- a/favorite/src/main/res/layout/activity_favorite.xml
+++ b/favorite/src/main/res/layout/activity_favorite.xml
@@ -15,6 +15,7 @@
         app:title="@string/favorite"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_favorite"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
